add chainId
